[gd_scene load_steps=8 format=3 uid="uid://cl5g7tjmjq45r"]

[ext_resource type="Theme" uid="uid://cwwkk3kpedi4j" path="res://0-resources/main_theme.tres" id="1_v16xo"]
[ext_resource type="Script" uid="uid://uvaoekoq750b" path="res://3-ui/main-menu/main_menu.gd" id="2_o43a6"]
[ext_resource type="Texture2D" uid="uid://djkjpl835ym8t" path="res://0-assets/sprites/Misc/main_menu.png" id="3_0i3i1"]
[ext_resource type="Script" uid="uid://wtkip6i1f07w" path="res://3-ui/components/on-hover-anim-component/on_hover_animation_component.gd" id="3_shm1l"]
[ext_resource type="Script" uid="uid://bei2cvpc8wqtr" path="res://3-ui/components/btn-sfx-component/Btnsfx_component.gd" id="4_q63ys"]
[ext_resource type="Texture2D" uid="uid://uf8wlqvbm0u0" path="res://0-assets/sprites/logo.png" id="6_7wdfj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v16xo"]
bg_color = Color(0.156863, 0.156863, 0.156863, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v16xo")
script = ExtResource("2_o43a6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0i3i1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v16xo")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/margin_left = 25

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.133333, 0.137255, 0.137255, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 128
text = "Massaquerade"

[node name="ButtonMarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/margin_left = 225
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ButtonMarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="PlayButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_type_variation = &"PlayButton"
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="OnHoverAnimComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/MarginContainer/PlayButton"]
script = ExtResource("3_shm1l")
metadata/_custom_type_script = "uid://wtkip6i1f07w"

[node name="SFXComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/MarginContainer/PlayButton"]
script = ExtResource("4_q63ys")
metadata/_custom_type_script = "uid://bei2cvpc8wqtr"

[node name="ButtonVBox" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="HowToPlayButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox"]
visible = false
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "How To Play"

[node name="OnHoverAnimComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox/HowToPlayButton"]
script = ExtResource("3_shm1l")
metadata/_custom_type_script = "uid://wtkip6i1f07w"

[node name="SFXComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox/HowToPlayButton"]
script = ExtResource("4_q63ys")
metadata/_custom_type_script = "uid://bei2cvpc8wqtr"

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Settings"

[node name="OnHoverAnimComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox/SettingsButton"]
script = ExtResource("3_shm1l")
metadata/_custom_type_script = "uid://wtkip6i1f07w"

[node name="SFXComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox/SettingsButton"]
script = ExtResource("4_q63ys")
metadata/_custom_type_script = "uid://bei2cvpc8wqtr"

[node name="CreditsButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox"]
visible = false
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Credits"

[node name="OnHoverAnimComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox/CreditsButton"]
script = ExtResource("3_shm1l")
metadata/_custom_type_script = "uid://wtkip6i1f07w"

[node name="SFXComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox/CreditsButton"]
script = ExtResource("4_q63ys")
metadata/_custom_type_script = "uid://bei2cvpc8wqtr"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Quit"

[node name="OnHoverAnimComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox/QuitButton"]
script = ExtResource("3_shm1l")
metadata/_custom_type_script = "uid://wtkip6i1f07w"

[node name="SFXComponent" type="Node" parent="PanelContainer/VBoxContainer/ButtonMarginContainer/VBoxContainer/ButtonVBox/QuitButton"]
script = ExtResource("4_q63ys")
metadata/_custom_type_script = "uid://bei2cvpc8wqtr"

[node name="Logo" type="TextureRect" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("6_7wdfj")
expand_mode = 1
